--- a/index.htm
+++ b/index.htm
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="rightsection">
-          <img src="Images/dev1.svg" />
+          <img src="Images/dev1.svg" alt="idk"/>
         </div>
       </section>
       <hr />
